<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="itemViewModel" type="com.example.chareta.viewmodel.ItemViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/loginPageBackgroundColor"
                                                   tools:context=".view.CreatePostFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints" android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.Chareta.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@android:color/white"
                app:title="@string/app_name"/>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/post_item"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp" android:id="@+id/textView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.461" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@{itemViewModel.itemName}"
                android:maxLines="1"
                android:id="@+id/itemname_editext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/starting_price"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{itemViewModel.itemStartingPrice}"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/startingprice_Edittext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/item_description"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:id="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{itemViewModel.itemDescription}"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/item_description_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/pickdate_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->itemViewModel.onPickDateButtonClicked()}"
            android:text="@string/pick_date"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
    />

    <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@{itemViewModel.expiryDate}"
            android:id="@+id/expiry_date_textview"

            android:textAllCaps="true"
            android:textAlignment="center"
            android:paddingTop="9dp"
            android:textSize="20sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.463" app:layout_constraintStart_toEndOf="@+id/pickdate_btn"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->itemViewModel.onBackButtonClicked()}"
            android:text="@string/button_back"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/post_button" android:layout_marginRight="8dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->itemViewModel.onPostButtonClicked()}"
            android:text="@string/post_btn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="40dp" android:id="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_end="40dp" android:id="@+id/guideline2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="414dp" android:id="@+id/guideline3"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>