<resources>
    <string name="app_name">ጫረታ</string>
    <string name="app_logo">LOGO</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="button_cancel">CANCEL</string>
    <string name="click_here">not registered? click here</string>
    <string name="register_form">Registration Form</string>
    <string name="hint_phonenumber">Phone No</string>
    <string name="hint_address">Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="button_back">Back</string>
    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="starting_price">Starting Price</string>
    <string name="posted_by">Posted By</string>
    <string name="expiry_date">expired Date</string>
    <string name="post_item">Post Item</string>

    <string name="registration_confirmation">Successfully Registered!</string>

    <string name="post_date">Post Date</string>
    <string name="post_btn">Post</string>
    <string name="pick_date">Pickdate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>

    <string name="edit_button">Edit</string>
    <string name="withdraw_button">Delete</string>
    <string name="see_bids">Bids</string>

    <string name="item_details">Item Detail</string>
    <string name="item_names">Item Name</string>
    <string name="item_descritption">Item description</string>
    <string name="place_bid">Place a Bid</string>
    <string name="placebid">Place Bid</string>




</resources>
