...
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemname_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/item_names"
            android:textSize="24sp"
            android:layout_marginTop="88dp" />

...
