<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/post_item"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/post_item"
            app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/menu"
        android:title="@string/logout"
        app:showAsAction="always" />

</menu>
